--- a/Carros/app/build.gradle
+++ b/Carros/app/build.gradle
@@ -1,16 +1,17 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.3'
-
+    buildToolsVersion "26.0.0"
     defaultConfig {
         applicationId "br.com.livroandroid.carros"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -21,31 +22,48 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 
-    // Livro
-    compile 'br.com.livroandroid:android-utils:5.0.1'
-
-    // Google
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:preference-v7:25.3.1'
-
-    // Play Services
-    compile 'com.google.android.gms:play-services-maps:10.2.6'
-    compile 'com.google.android.gms:play-services-location:10.2.6'
-
-    // Libs
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.squareup:otto:1.3.8'
-    compile 'com.google.code.gson:gson:2.8.0'
+    // Test
+    testImplementation 'junit:junit:4.12'
 
     // Kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile "org.jetbrains.anko:anko-commons:$anko_version"
+
+    // Android Support
+    implementation 'com.android.support:appcompat-v7:25.4.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:25.4.0'
+    implementation 'com.android.support:recyclerview-v7:25.4.0'
+    implementation 'com.android.support:cardview-v7:25.4.0'
+
+    // Google Play Services - Mapas e Localização
+    implementation 'com.google.android.gms:play-services-maps:11.0.1'
+    implementation 'com.google.android.gms:play-services-location:11.0.1'
+
+    // HTTP e Download Imagens
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.0'
+
+    // Google-GSON
+    implementation 'com.google.code.gson:gson:2.8.0'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+
+    // Google Room
+    compile "android.arch.persistence.room:runtime:$room_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
+
+    // Bus de Eventos
+    compile 'org.greenrobot:eventbus:3.0.0'
+
 }
 repositories {
     mavenCentral()
