--- a/Carros/app/src/main/AndroidManifest.xml
+++ b/Carros/app/src/main/AndroidManifest.xml
@@ -2,21 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.livroandroid.carros">
 
-    <!-- Acessar a internet -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <!-- Ver informações da rede -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <!-- Gravar e escrever no sdcard -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- Mapas V2 depende da OpenGL ES V2 -->
+    <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
+
     <!-- GPS por hardware -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <!-- Obter a localização por Wi-Fi ou triangulação de antenas -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!-- Mapas V2 depende da OpenGL ES V2 -->
-    <uses-feature
-        android:glEsVersion="0x00020000"
-        android:required="true" />
 
 
     <application
@@ -24,6 +18,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -32,12 +27,21 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <!-- Chave de acesso (API Key) criada na página de Console. -->
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="@string/API_KEY" />
+        <meta-data android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/API_KEY"/>
 
+        <!-- Camera -->
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
 
-        <activity
+        <activity android:launchMode="singleTop"
             android:name=".activity.MainActivity"
             android:theme="@style/AppTheme.NavDrawer">
             <intent-filter>
@@ -48,26 +52,16 @@
         </activity>
         <activity
             android:name=".activity.CarrosActivity"
-            android:parentActivityName=".activity.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activity.MainActivity" />
-        </activity>
+            android:parentActivityName=".activity.MainActivity" />
         <activity
             android:name=".activity.SiteLivroActivity"
-            android:parentActivityName=".activity.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activity.MainActivity" />
-        </activity>
+            android:parentActivityName=".activity.MainActivity" />
         <activity
             android:name=".activity.CarroActivity"
-            android:parentActivityName=".activity.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activity.MainActivity" />
-        </activity>
-
+            android:parentActivityName=".activity.MainActivity" />
+        <activity
+            android:name=".activity.CarroFormActivity"
+            android:parentActivityName=".activity.MainActivity" />
     </application>
 
 </manifest>
