--- a/capitulos/cap19-multimidia/Ex2-HelloCamera/app/build.gradle
+++ b/capitulos/cap19-multimidia/Ex2-HelloCamera/app/build.gradle
@@ -24,8 +24,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.4.0'
-    compile 'br.com.livroandroid:android-utils:5.0.1'
+    implementation 'com.android.support:appcompat-v7:25.4.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 repositories {
