--- a/capitulos/cap23-receiver/Ex2-HelloReceiverDinamico/gradle/wrapper/gradle-wrapper.properties
+++ b/capitulos/cap23-receiver/Ex2-HelloReceiverDinamico/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Apr 10 15:27:10 PDT 2013
+#Sat Jun 17 20:38:24 BRT 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.0-milestone-1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.0-rc-1-all.zip
