--- a/Carros/app/build.gradle
+++ b/Carros/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion "26.0.0"
     defaultConfig {
         applicationId "br.com.livroandroid.carros"
         minSdkVersion 23
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -35,15 +35,15 @@ dependencies {
     compile "org.jetbrains.anko:anko-commons:$anko_version"
 
     // Android Support
-    implementation 'com.android.support:appcompat-v7:25.4.0'
+    implementation 'com.android.support:appcompat-v7:26.0.0-beta2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:25.4.0'
-    implementation 'com.android.support:recyclerview-v7:25.4.0'
-    implementation 'com.android.support:cardview-v7:25.4.0'
+    implementation 'com.android.support:design:26.0.0-beta2'
+    implementation 'com.android.support:recyclerview-v7:26.0.0-beta2'
+    implementation 'com.android.support:cardview-v7:26.0.0-beta2'
 
     // Google Play Services - Mapas e Localização
-    implementation 'com.google.android.gms:play-services-maps:11.0.1'
-    implementation 'com.google.android.gms:play-services-location:11.0.1'
+    implementation 'com.google.android.gms:play-services-maps:11.0.2'
+    implementation 'com.google.android.gms:play-services-location:11.0.2'
 
     // HTTP e Download Imagens
     implementation 'com.squareup.picasso:picasso:2.5.2'
