--- a/capitulos/cap05-activity/HelloActivity/app/build.gradle
+++ b/capitulos/cap05-activity/HelloActivity/app/build.gradle
@@ -1,16 +1,19 @@
 apply plugin: 'com.android.application'
+
 apply plugin: 'kotlin-android'
 
-android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+apply plugin: 'kotlin-android-extensions'
 
+android {
+    compileSdkVersion 26
+    buildToolsVersion "26.0.0"
     defaultConfig {
-        applicationId "br.com.livroandroid.hello"
-        minSdkVersion 14
-        targetSdkVersion 25
+        applicationId "br.com.livroandroid.helloandroid"
+        minSdkVersion 23
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -21,10 +24,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-}
-
-repositories {
-    mavenCentral()
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation ('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile 'com.android.support:appcompat-v7:26.0.0-beta2'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 }
