--- a/capitulos/cap19-multimidia/Ex1-HelloVideoView/gradle/wrapper/gradle-wrapper.properties
+++ b/capitulos/cap19-multimidia/Ex1-HelloVideoView/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Jun 16 16:03:49 BRT 2017
+#Fri Jul 07 16:10:43 BRT 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.0-rc-1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-milestone-1-all.zip
