--- a/capitulos/cap06-actionbar/Ex4-HelloToolbar/build.gradle
+++ b/capitulos/cap06-actionbar/Ex4-HelloToolbar/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.1.3-2'
     repositories {
+        google()
         jcenter()
     }
     dependencies {
@@ -16,6 +17,12 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
+        mavenCentral()
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
