--- a/capitulos/cap07-views/HelloLayoutsViews/build.gradle
+++ b/capitulos/cap07-views/HelloLayoutsViews/build.gradle
@@ -3,11 +3,11 @@
 buildscript {
     ext.kotlin_version = '1.1.3-2'
     repositories {
-        maven { url 'https://maven.google.com' }
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha2'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha5'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -17,7 +17,7 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url 'https://maven.google.com' }
+        google()
         jcenter()
         mavenCentral()
     }
