--- a/capitulos/cap08-fragments/HelloFragments/build.gradle
+++ b/capitulos/cap08-fragments/HelloFragments/build.gradle
@@ -3,10 +3,11 @@
 buildscript {
     ext.kotlin_version = '1.1.3-2'
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha2'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha5'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -16,7 +17,9 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
+        mavenCentral()
     }
 }
 
