--- a/capitulos/cap19-multimidia/Ex1-HelloVideoView/build.gradle
+++ b/capitulos/cap19-multimidia/Ex1-HelloVideoView/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.1.3-2'
     repositories {
+        google()
         jcenter()
     }
     dependencies {
@@ -16,7 +17,9 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
+        mavenCentral()
     }
 }
 
