--- a/capitulos/cap19-multimidia/Ex2-HelloCamera/app/build.gradle
+++ b/capitulos/cap19-multimidia/Ex2-HelloCamera/app/build.gradle
@@ -24,7 +24,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:25.4.0'
+    implementation 'com.android.support:appcompat-v7:26.0.0-beta2'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 repositories {
