--- a/capitulos/cap21-location/Ex2-LocationUpdates/build.gradle
+++ b/capitulos/cap21-location/Ex2-LocationUpdates/build.gradle
@@ -3,10 +3,11 @@
 buildscript {
     ext.kotlin_version = '1.1.3-2'
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha3'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha5'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -16,6 +17,12 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
+        mavenCentral()
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
