--- a/capitulos/cap26-firebase/HelloFirebase/build.gradle
+++ b/capitulos/cap26-firebase/HelloFirebase/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.1.3-2'
     repositories {
-        maven { url 'https://maven.google.com' }
+        google()
         jcenter()
     }
     dependencies {
@@ -19,7 +19,7 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url 'https://maven.google.com' }
+        google()
         jcenter()
         mavenCentral()
     }
