--- a/Carros/app/build.gradle
+++ b/Carros/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    compileSdkVersion 27
+    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "br.com.livroandroid.carros"
         minSdkVersion 14
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -35,11 +35,11 @@ dependencies {
     compile "org.jetbrains.anko:anko-commons:$anko_version"
 
     // Android Support
-    implementation 'com.android.support:appcompat-v7:26.0.0-beta2'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:26.0.0-beta2'
-    implementation 'com.android.support:recyclerview-v7:26.0.0-beta2'
-    implementation 'com.android.support:cardview-v7:26.0.0-beta2'
+    implementation 'com.android.support:design:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.android.support:cardview-v7:27.0.2'
 
     // Google Play Services - Mapas e Localização
     implementation 'com.google.android.gms:play-services-maps:11.0.2'
