--- a/capitulos/cap04-hello/HelloAndroid/gradle/wrapper/gradle-wrapper.properties
+++ b/capitulos/cap04-hello/HelloAndroid/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sat Jul 08 18:20:20 BRT 2017
+#Sun Feb 25 13:20:56 BRT 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-milestone-1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
