--- a/capitulos/cap19-multimidia/Ex2-HelloCamera/app/build.gradle
+++ b/capitulos/cap19-multimidia/Ex2-HelloCamera/app/build.gradle
@@ -25,7 +25,15 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.0.2'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"
+
+    // Google-GSON
+    implementation 'com.google.code.gson:gson:2.8.2'
+
+    // OkHttp
+    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
 }
 repositories {
     mavenCentral()
