--- a/capitulos/cap06-actionbar/Ex1-HelloActionBar/app/build.gradle
+++ b/capitulos/cap06-actionbar/Ex1-HelloActionBar/app/build.gradle
@@ -21,6 +21,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
