--- a/capitulos/cap06-actionbar/Ex2-HelloActionBar-SearchView/app/build.gradle
+++ b/capitulos/cap06-actionbar/Ex2-HelloActionBar-SearchView/app/build.gradle
@@ -21,8 +21,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 repositories {
     mavenCentral()
