--- a/capitulos/cap06-actionbar/Ex4-HelloToolbar/app/build.gradle
+++ b/capitulos/cap06-actionbar/Ex4-HelloToolbar/app/build.gradle
@@ -21,11 +21,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Dependencia da biblioteca de compatibilidade v7
-    compile 'com.android.support:appcompat-v7:27.1.0'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
 }
 repositories {
