--- a/capitulos/cap19-multimidia/Ex2-HelloCamera/app/build.gradle
+++ b/capitulos/cap19-multimidia/Ex2-HelloCamera/app/build.gradle
@@ -23,7 +23,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.0.2'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
